--- a/HBEmma_Eudaimonia/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
+++ b/HBEmma_Eudaimonia/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
@@ -229,7 +229,7 @@ MaterialEditorInstanceConstant=MaterialEditorInstanceConstant.ParameterGroups.Gl
 MaterialInstanceConstant=MaterialEditorInstanceConstant.ParameterGroups.Global Scalar Parameter Values,MaterialEditorInstanceConstant.ParameterGroups.Global Vector Parameter Values
 
 [ContentBrowser]
-ContentBrowserTab1.SelectedPaths=/Game/UI
+ContentBrowserTab1.SelectedPaths=/Game/UI/UI_Img_Assets
 ContentBrowserTab1.PluginFilters=
 ContentBrowserTab1.SourcesExpanded=True
 ContentBrowserTab1.IsLocked=False
@@ -249,17 +249,17 @@ ContentBrowserTab1.SelectedCollections=
 ContentBrowserTab1.ExpandedCollections=
 ContentBrowserTab1.CollectionAreaExpanded=False
 ContentBrowserTab1.CollectionSearchAreaExpanded=False
-ContentBrowserTab1.ThumbnailSizeGrid=2
+ContentBrowserTab1.ThumbnailSizeGrid=1
 ContentBrowserTab1.ThumbnailSizeList=2
 ContentBrowserTab1.ThumbnailSizeCustom=2
 ContentBrowserTab1.ThumbnailSizeColumn=0
 ContentBrowserTab1.CurrentViewType=1
-ContentBrowserTab1.ZoomScale=0
+ContentBrowserTab1.ZoomScale=1
 ContentBrowserTab1.ListViewColumnsManuallyChangedOnce=False
 ContentBrowserTab1.ColumnViewColumnsManuallyChangedOnce=False
-ContentBrowserTab1.JumpMRU=/All/Game/UI
-ContentBrowserTab1.JumpMRU=/All/Game/UI/UI_Img_Assets/UI_Materials
 ContentBrowserTab1.JumpMRU=/All/Game/UI/UI_Img_Assets
+ContentBrowserTab1.JumpMRU=/All/Game/UI/UI_Img_Assets/UI_Materials
+ContentBrowserTab1.JumpMRU=/All/Game/UI
 ContentBrowserTab1.JumpMRU=/All/Game
 ContentBrowserTab1.JumpMRU=/All/Game/ThirdPerson/Blueprints
 ContentBrowserTab1.JumpMRU=/All/Game/ThirdPerson
@@ -313,10 +313,10 @@ DebuggerAttached=False
 RecentAssetEditors=MaterialInstanceEditor
 RecentAssetEditors=MaterialEditor
 RecentAssetEditors=WidgetBlueprintEditor
+RecentAssetEditors=BlueprintEditor
+RecentAssetEditors=BlueprintEditor
 RecentAssetEditors=MaterialInstanceEditor
 RecentAssetEditors=WidgetBlueprintEditor
-RecentAssetEditors=BlueprintEditor
-RecentAssetEditors=BlueprintEditor
 RecentAssetEditors=BlueprintEditor
 RecentAssetEditors=MaterialEditor
 RecentAssetEditors=TextureEditor
@@ -365,10 +365,10 @@ DisplayActorsCount=False
 MRUItem0=/Game/UI/UI_Img_Assets/UI_Materials/M_UI_ManaProgress_Inst
 MRUItem1=/Game/UI/UI_Img_Assets/UI_Materials/M_UI_ManaProgress
 MRUItem2=/Game/UI/WBP_HUD
-MRUItem3=/Game/UI/UI_Img_Assets/UI_Materials/M_UI_Crescent_Inst
-MRUItem4=/Game/UI/WBP_StaminaBar
-MRUItem5=/Game/ThirdPerson/Blueprints/BP_ThirdPersonCharacter
-MRUItem6=/Game/ThirdPerson/Blueprints/BP_ThirdPersonPlayerController
+MRUItem3=/Game/ThirdPerson/Blueprints/BP_ThirdPersonCharacter
+MRUItem4=/Game/ThirdPerson/Blueprints/BP_ThirdPersonPlayerController
+MRUItem5=/Game/UI/UI_Img_Assets/UI_Materials/M_UI_Crescent_Inst
+MRUItem6=/Game/UI/WBP_StaminaBar
 MRUItem7=/Game/ThirdPerson/Blueprints/BP_ThirdPersonGameMode
 MRUItem8=/Game/UI/UI_Img_Assets/UI_Materials/M_UI_Crescent
 MRUItem9=/Game/UI/UI_Img_Assets/Vector
@@ -2149,8 +2149,8 @@ StaticMeshActor="\"Object.StaticMeshActor.StaticMeshComponent.Object.Collision.B
 Border="\"Object.Appearance.Background\" "
 ContentWidget=
 PanelWidget=
-Widget=
-Visual=
+Widget="\"Object.Appearance.Brush\" "
+Visual="\"Object.Appearance.Brush\" "
 Object=
 Image="\"Object.Appearance.Brush\" "
 ProgressBar="\"Object.Style.WidgetStyle\" "
@@ -2309,8 +2309,8 @@ bNavigateToNativeFunctionsFromCallNodes=True
 bDoubleClickNavigatesToParent=True
 bEnableTypePromotion=True
 bShowPanelContextMenuForIncompatibleConnections=True
-TypePromotionPinDenyList=string
 TypePromotionPinDenyList=text
+TypePromotionPinDenyList=string
 BreakpointReloadMethod=RestoreAll
 bEnablePinValueInspectionTooltips=True
 bEnableNamespaceEditorFeatures=True
@@ -2525,4 +2525,8 @@ Color3=(R=0.000000,G=0.900000,B=1.000000,A=1.000000)
 [MaterialInstanceEditor]
 bDrawGrid=False
 PrimType=1
+
+[PluginBrowser]
+InstalledPlugins=GeneSplicer
+InstalledPlugins=PaperZD
 
